--- a/atp_frontend/package.json
+++ b/atp_frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
     "chartist": "^0.11.3",
     "faker": "^4.1.0",
     "react": "^16.9.0",
     "react-chartist": "^0.13.3",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
