--- a/atp_frontend/package.json
+++ b/atp_frontend/package.json
@@ -10,6 +10,7 @@
     "react-chartist": "^0.13.3",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
+    "react-popper-tooltip": "^2.8.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "semantic-ui-css": "^2.4.1",
