--- a/atp_frontend/package.json
+++ b/atp_frontend/package.json
@@ -13,6 +13,7 @@
     "react-popper-tooltip": "^2.8.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-virtualized": "^9.21.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0"
   },
